<resources>
    <string name="app_name">Calculator App</string>
    <string name="first_number">First Number</string>
    <string name="second_number">Second Number</string>
    <string name="addition">+</string>
    <string name="subtraction">-</string>
    <string name="division">/</string>
    <string name="multiplication">*</string>
    <string name="result">Result</string>
    <string name="clear">CLEAR</string>
</resources>